--- a/src/sass/sections/_corp-info.scss
+++ b/src/sass/sections/_corp-info.scss
@@ -1,7 +1,7 @@
 $block: '.corp-info';
 #{$block} {
     &__text {
-        text-align: center;
+        text-align: left;
         &__title {
             @extend %h1;
         }
